									Update CHANGELOG
									Change version number to 1.0.0
2.0.0			22.03.2022			Remove "Status" from "RAK3172_Transmit"
									Add key handling for ABP mode
									Add functions to read the RSSI and SNR value of the last packet
									Add P2P mode
									Code refractoring
									Update documentation
									Update CHANGELOG
									Change version number to 2.0.0
3.0.0			22.05.2022			Fix missing path in CMakeLists.txt
									Replace Arduino code with esp-idf
									Add option to enable / disable LoRaWAN or P2P mode
									Add ADR support to LoRaWAN driver
									Add power down options in LoRaWAN mode
									Code refractoring
									Update documentation
									Update CHANGELOG
									Change version number to 3.0.0
4.0.0								Fix error in splash screen handling in function "RAK3172_SetMode"
									Rename error codes
									Add RAK3172 device structure initialization macro
									Add firmware version check
									Add factory reset
									Add sleep command for the RAK module
									Add "RAK3172_ERR_NOT_CONNECTED" in LoRaWAN mode
									Add error check for "RAK3172_LoRaWAN_SetRX1Delay" and "RAK3172_LoRaWAN_SetRX2Delay"
									Add function to set / get the LoRaWAN join mode (ABP or OTAA)
									And functions to get / set the join (1/2) and Rx (1/2) delays
									Add option to enable / disable a hardware reset
									Add support for core affinity
									Add support for RUI3 based firmware
									Add option for UART to support ESP32 power management modes
									Rework event handling
									Remove LoRaWAN transmit timeout
									Improve parameter checking in different functions
									Improve sleep handling of the driver
									Add error output to "RAK3172_ERROR_CHECK"
									Change license to MIT
									Code optimizations
									Update Kconfig with new configuration settings
									Update documentation
									Update examples
									Update CHANGELOG
									Change version number to 4.0.0